--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,19 +1,7 @@
 # dependencies
-node_modules/
-
-# production build
-dist/
+node_modules
 
 # environment variables
 .env
 
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# OS files
-.DS_Store
-
-# TypeScript cache
-*.tsbuildinfo
